# edge-terrarium

./: .gitignore  README.md  pyproject.toml  requirements.txt  terrarium.py
apps/custom-client/: Dockerfile  app-config.yml  app-test-config.yml
apps/file-storage/: Dockerfile  README.md  app-config.yml  app-test-config.yml  main.py  pyproject.toml
apps/file-storage/file_storage/: __init__.py  api.py  app.py  logging.py  models.py  storage.py
apps/logthon/: Dockerfile  README.md  app-config.yml  app-test-config.yml  pyproject.toml
apps/nginx/: Dockerfile  app-config.yml  default.conf  default.conf.template  k3s-configmap-nginx.yaml.template  nginx.conf  nginx.conf.template  server.conf.template
apps/service-sink/: Dockerfile  app-config.yml  app-test-config.yml
apps/test-db-app/: Dockerfile  app-config.yml  main.py
apps/vault/: Dockerfile  app-config.yml  app-test-config.yml
cdp-client/: Dockerfile  main.c
certs/: edge-terrarium-tls-configmap.yaml  edge-terrarium-tls-secret.yaml  terrarium-tls-configmap.yaml.template  terrarium-tls-secret.yaml.template
configs/: README.md  vault-secrets.yml
configs/docker/: README.md  docker-compose.apps.yml  docker-compose.base.yml  docker-compose.core.yml  docker-compose.gateway.yml  docker-compose.yml
configs/k3s/: README.md  cdp-client-deployment.yaml  custom-client-deployment.yaml  ingress.yaml  (+25 more)
custom-client/: Dockerfile  main.c  main.c.backup
docs/: architecture.md  configuration.md  development.md  getting-started.md  host-based-routing.md  learning-path.md  project-structure.md  secrets-and-config-maps.md  service-communication.md  testing.md  troubleshooting.md
kong/: Dockerfile
logthon/: .dockerignore  Dockerfile  MODULAR_ARCHITECTURE.md  README.md  main.py  pyproject.toml  test_modular.py
logthon/logthon/: __init__.py  api.py  app.py  config.py  storage.py  ui.py  websocket_manager.py
scripts/: build-images-k3s-smart.sh  build-images-k3s.sh  build-images-minikube.sh  build-images-smart.sh  build-images.sh  cleanup-old-pods.sh  create-k3s-tls-secret.sh  deploy.bat  deploy.sh  generate-certs.sh  init-vault-enhanced.sh  init-vault.sh  test-docker.sh  test-k3s.sh  test-minikube.sh  test-setup.sh  test.sh
scripts_bak/: build-images.sh  generate-tls-certs.sh  init-vault-enhanced.sh
service-sink/: Dockerfile  main.c  main.c.backup
terrarium_cli/: __init__.py  main.py
(+108 files in other folders)
