[project]
name = "edge-terrarium"
version = "0.1.0"
description = "Dynamic Microservices Platform with Docker and K3s orchestration"
authors = [
    {name = "Edge Terrarium Team", email = "team@edge-terrarium.local"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=6.0",
    "Jinja2>=3.1.0",
    "requests>=2.31.0",
]

[project.scripts]
terrarium = "terrarium_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["terrarium_cli"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]
