[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "file-storage"
version = "1.0.0"
description = "File Storage API service for Edge Terrarium"
authors = [
    {name = "Edge Terrarium Team", email = "team@edge-terrarium.com"}
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["file_storage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
